samples/errors/inv-chars.fls
if `false
    write(true?)

write(false);
